atualizacao do trabalho
